# gfx-final

./: .gitignore  CS123.pro  CS123.pro.user.742ff7c  CS123.pro.user.8fee27a  CS123.pro.user.c9de217  CS123.pro.user.f00e3c4  Filter_README.txt  Intersect_README.txt  LICENSE  Makefile  README.md  README.txt  README_Brush.txt  README_Filter.txt  README_Intersect.txt  README_Ray.txt  Ray_README.txt  Sceneview_README.txt  Shapes_README.txt  callgrind.out.17522  callgrind.out.19244  callgrind.out.19771  cs1230-real.pro  gfx-final.pro  moc_Canvas2D.cpp  moc_Snake.cpp  moc_SupportCanvas3D.cpp  proj.pro  qrc_resources.cpp  resources.qrc  tmp.1.edge  tmp.1.ele  tmp.1.face  tmp.1.node  tmp.ele  tmp.smesh
brush/: Brush.cpp  Brush.h  BrushManager.cpp  BrushManager.h  ConstantBrush.cpp  ConstantBrush.h  FoodBrush.cpp  FoodBrush.h  LinearBrush.cpp  LinearBrush.h  QuadraticBrush.cpp  QuadraticBrush.h  SmudgeBrush.cpp  SmudgeBrush.h  Snake.cpp  Snake.h  SnakeBrush.cpp  SnakeBrush.h  SnakeManager.cpp
camera/: Camera.h  CamtransCamera.cpp  CamtransCamera.h  OrbitingCamera.cpp  OrbitingCamera.h
filter/: Filter.h  FilterBlur.cpp  FilterBlur.h  FilterEdge.cpp  FilterEdge.h  FilterRotate.cpp  FilterRotate.h  FilterScale.cpp  FilterScale.h  FilterSharpen.cpp  FilterSharpen.h  FilterUnsharp.cpp  FilterUnsharp.h  FilterUtils.cpp  FilterUtils.h  Kernel.cpp  Kernel.h
gl/: GLDebug.cpp
intersect/: implicitshape.cpp  implicitshape.h  kdtree.cpp  kdtree.h
lib/: CS123SceneData.h
tetgen/: CMakeLists.txt  makefile  makefile~  tetgen  tetgen_main.cxx
tetgen/.pc/: applied-patches
(+131 files in other folders)
